// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt=""
    className="productImg undefined"
    src="https://hola.png"
  />
</div>
`;

exports[`ProductTitle Debe mostrar el componente correctamente con el titulo personalizado 1`] = `
<img
  alt=""
  className="productImg undefined"
  src="https://hola.png"
/>
`;
